@@ -185,6 +185,7 @@ options:
 --inscolor=ccc     color for insertions
 --delcolor=ccc     color for deletions
 --repcolor=ccc     color for replaces
+--opac=nn          opacity of difference markers, nn -- percent value
 --debug=2          write the text fed to the sequence matcher into
                    temporary files (e.g., /tmp/page1.txt etc.)
 --debug=3          as --debug=2 but also includes coordinates in
